--- a/hs-libp2p.cabal
+++ b/hs-libp2p.cabal
@@ -2,17 +2,17 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7023c98b5479528f078f51f4aac96086772f15429293a417cff86955ddda913b
+-- hash: 233193df36cb69c41489dd1d7557b67201a87c825ed583c0a5b13d3e68d0a2d3
 
 name:           hs-libp2p
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/hs-libp2p#readme>
-homepage:       https://github.com/githubuser/hs-libp2p#readme
-bug-reports:    https://github.com/githubuser/hs-libp2p/issues
+description:    Please see the README on GitHub at <https://github.com/ydzz/hs-libp2p#readme>
+homepage:       https://github.com/ydzz/hs-libp2p#readme
+bug-reports:    https://github.com/ydzz/hs-libp2p/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2018 Author name here
-license:        BSD3
+license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 cabal-version:  >= 1.10
@@ -21,11 +21,16 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/hs-libp2p
+  location: https://github.com/ydzz/hs-libp2p
 
 library
   exposed-modules:
       Libp2p.Core.Crypto
+      Libp2p.Core.Crypto.Key
+      Libp2p.Core.Crypto.PB
+      Libp2p.Core.Crypto.PB.KeyType
+      Libp2p.Core.Crypto.PB.PrivateKey
+      Libp2p.Core.Crypto.PB.PublicKey
       Libp2p.Core.Crypto.RSA
   other-modules:
       Paths_hs_libp2p
@@ -38,7 +43,11 @@ library
     , bytestring
     , containers
     , cryptonite
-    , hs-multihash
+    , cryptostore
+    , pem
+    , protocol-buffers
+    , protocol-buffers-descriptor
+    , x509
   default-language: Haskell2010
 
 test-suite hs-libp2p-test
@@ -51,6 +60,6 @@ test-suite hs-libp2p-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hs-libp2p
-    , hs-multihash
   default-language: Haskell2010
