--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,10 @@ resolver: lts-12.0
 
 extra-deps:
  - base58-bytestring-0.1.0
+ - cryptostore-0.2.0.0
+ - x509-1.7.5
 
 packages:
-- .
-- hs-multihash
+ - .
+#- hs-multihash
+#- hs-multiaddr
