--- a/hs-libp2p.cabal
+++ b/hs-libp2p.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f02d7aeb2ac00578f4cd6b060cc9b4cb715e80318532bc9425f3a3e53bcbd192
+-- hash: 7cc9d6bc5f6eb61043e0046c3f0c8e7383fc7c522e0324f0b06771514fd18d0f
 
 name:           hs-libp2p
 version:        0.1.0.0
@@ -45,6 +45,7 @@ library
       Yamux.Const
       Yamux.Mux
       Yamux.Session
+      Yamux.Stream
   other-modules:
       Paths_hs_libp2p
   hs-source-dirs:
@@ -66,12 +67,14 @@ library
     , hexstring
     , hs-multiaddr
     , hs-multihash
+    , if
     , io-streams
     , network
     , pem
     , prelude-safeenum
     , protocol-buffers
     , protocol-buffers-descriptor
+    , stm
     , transformers
     , x509
   default-language: Haskell2010
