--- a/hs-libp2p.cabal
+++ b/hs-libp2p.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a2bc2a147aa7f1c673c7d5c545162aa369012d73b54aa02a7e8cdd64349fe088
+-- hash: 71fe07cfcc24aadeedc42f1324bdbef7366097f94674766b15d39df905376129
 
 name:           hs-libp2p
 version:        0.1.0.0
@@ -43,6 +43,7 @@ library
       Yamux.Addr
       Yamux.Config
       Yamux.Const
+      Yamux.Deadline
       Yamux.Mux
       Yamux.Session
       Yamux.Stream
@@ -52,7 +53,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      async
+    , base >=4.7 && <5
     , base58-bytestring
     , binary
     , bytes
@@ -75,6 +77,7 @@ library
     , protocol-buffers
     , protocol-buffers-descriptor
     , stm
+    , time
     , transformers
     , x509
   default-language: Haskell2010
@@ -88,7 +91,8 @@ test-suite hs-libp2p-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      async
+    , base >=4.7 && <5
     , bytestring
     , data-default
     , extra
@@ -96,4 +100,5 @@ test-suite hs-libp2p-test
     , hs-libp2p
     , hs-multihash
     , network
+    , time
   default-language: Haskell2010
